ingress/btns-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-main
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/cluster-issuer: letsencrypt-prod
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - bcgithubrunners.australiaeast.cloudapp.azure.com
      secretName: tlsingress
  rules:
  - host: bcgithubrunners.australiaeast.cloudapp.azure.com
    http:
      paths:
      - path: /btns/runners-scaler
        pathType: Prefix
        backend:
          service:
            name: btns-github-webhook-server
            port:
              number: 80
